package.json: changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "small-business-nextjs-theme...",
+    "name": "small-business-nextjs-theme..",
     "version": "0.1.0",
     "scripts": {
         "dev": "next dev",
